--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
 		"no-plusplus": 0,
 		"no-confusing-arrow": 0,
 		"no-unused-expressions": 0,
-		"quotes": 0
+		"quotes": 0,
+		"no-param-reassign": 0,
+		"no-nested-ternary": 0
 	}
 }
